[package]
name = "rustkeys"
version = "0.2.29"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.63"
description = "A collection of unique key generators."
keywords = ["key/value", "random" ]
categories = ["database", "key/value store"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darrylwest/rustkeys.git"
readme = "README.md"
publish = false

[lib]
name = "rustkeys"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
fastrand = "1.8.0"
num-bigint = "0.4.3"
rand = "0.8.4"
